# pilot-app

./: .gitignore  AGENT_NOTES.md  README.md
backend/: pyproject.toml
backend/allure-results/: 05ee4e31-13af-405f-8ed9-0e26de687213-result.json  099417b2-51b2-4963-9d64-78b9546269d5-result.json  0ccf0c65-22ae-4ff3-be7d-aae708484ea0-result.json  108a4bd7-3643-418b-b303-3423f970262c-result.json  12536aa6-cecb-4763-b2e3-1f728f634036-result.json  12be1f56-0ffd-4835-80f6-262e1caad7fb-result.json  1446b088-b165-4541-b6fb-30392c85e5fe-result.json  18503275-9499-4b14-ac50-342257ece9d1-result.json  1ffeafd0-e4d1-4ef5-a914-30a7ebb9b5b2-result.json  20a074ad-2b64-4a05-8b99-e0023c063254-result.json  21cdbdf4-bdf1-4d5f-8b34-85272683beed-result.json  28445e4d-a5d9-43a4-968e-aa2dce3e4475-result.json  28bbf370-b6b6-405d-94b8-33b24f3e80cb-result.json  28d1210a-3bdc-490d-8b22-e08cc4316e30-result.json  29a62ac1-ad26-4f37-98d7-11ee8f5bb7de-result.json  2d045fc1-ff14-40c5-ad80-764e60c3df2c-result.json  2e57b5d5-2547-4745-9539-1f835dad6285-result.json  2fcce30f-273a-4314-b779-36e5fbfeedb4-container.json  405b8265-9a23-44f5-8eef-cd710606874d-result.json  41eade09-dbc9-49d6-aabf-8a9fb749dafd-result.json  446724d9-0c35-4166-9af5-77df7e90ef9f-result.json  44b9a853-dedc-48e0-a538-958091a383a2-result.json  49da6964-41e2-4a50-be5c-a6712155ba53-result.json  4e13e00d-0413-4167-a69a-a08cedd70d94-result.json  503e91b0-3c3a-4681-b69b-cf3b44477a81-result.json  5350b082-080a-4dff-bd45-d7272c33a512-result.json  54364d59-ce17-4a9d-9cf4-2bc1e4386d48-result.json  5437757e-78c3-481d-9c45-f30dbbd81932-result.json  (+35 more)
(+52 files in other folders)
